crates/ruff_python_parser/tests/snapshots/valid_syntax@valid_annotation_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/valid_annotation_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..51,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Named(
                            ExprNamed {
                                range: 12..18,
                                target: Name(
                                    ExprName {
                                        range: 12..13,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 17..18,
                                        value: Int(
                                            3,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 21..24,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 25..50,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("g"),
                        range: 29..30,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 30..45,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 31..44,
                                parameter: Parameter {
                                    range: 31..44,
                                    name: Identifier {
                                        id: Name("arg"),
                                        range: 31..34,
                                    },
                                    annotation: Some(
                                        Named(
                                            ExprNamed {
                                                range: 37..43,
                                                target: Name(
                                                    ExprName {
                                                        range: 37..38,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                value: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        range: 42..43,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 47..50,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 47..50,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
