crates/ruff_python_parser/tests/snapshots/valid_syntax@yield_inside_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/yield_inside_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..50,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    range: 0..49,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 13..20,
                                value: Yield(
                                    ExprYield {
                                        range: 13..20,
                                        value: Some(
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    range: 19..20,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                range: 25..37,
                                value: YieldFrom(
                                    ExprYieldFrom {
                                        range: 25..37,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 36..37,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                range: 42..49,
                                value: Await(
                                    ExprAwait {
                                        range: 42..49,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 48..49,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
